[tool.poetry]
name = "polygon-io"
version = "0.1.0"
description = "Interface with polygon.io"
authors = ["chibenny <chibenny@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic-settings = "^2.4.0"
sqlmodel = "^0.0.21"

[tool.pytest]
addopts = ["--cov=polygon_io", "--cov-report=term-missing", "--cov-report=html"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
