[tool.poetry]
name = "polygon-io"
version = "0.1.0"
description = "Interface with polygon.io"
authors = ["chibenny <chibenny@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic-settings = "^2.4.0"
sqlmodel = "^0.0.21"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.pytest.ini_options]
testpaths = ["application"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
